<resources>
    <!-- App -->
    <string name="app_name">Scrabit</string>
    <string name="app_string">com.scrabit.ygam</string>

    <!-- Activity -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Onboarding -->
    <string name="skip_button_label">Skip</string>
    <string name="finish_button_label">Let\'s go!</string>
    <string name="finish_button_description">Finish Button Description</string>
    <string name="next_button_description">Next Button Description</string>

    <!-- Descriptions -->
    <string name="fragment_1_image_description_1">Image 1 Description</string>
    <string name="fragment_1_image_description_2">Image 2 Description</string>
    <string name="fragment_2_image_description_1">Image 1 Description</string>
    <string name="fragment_2_image_description_2">Image 2 Description</string>
    <string name="fragment_3_image_description_1">Image 1 Description</string>
    <string name="fragment_3_image_description_2">Image 2 Description</string>
    <string name="fragment_4_image_description_1">Image 1 Description</string>
    <string name="fragment_4_image_description_2">Image 2 Description</string>
    <string name="fragment_5_image_description_1">Image 1 Description</string>
    <string name="fragment_5_image_description_2">Image 2 Description</string>

    <string name="fragment_1_text_description_1">Fragment 1 Text 1</string>
    <string name="fragment_1_text_description_2">Fragment 1 Text 2</string>
    <string name="fragment_2_text_description_1">Fragment 2 Text 1</string>
    <string name="fragment_2_text_description_2">Fragment 2 Text 2</string>
    <string name="fragment_3_text_description_1">Fragment 3 Text 1</string>
    <string name="fragment_3_text_description_2">Fragment 3 Text 2</string>
    <string name="fragment_4_text_description_1">Fragment 4 Text 1</string>
    <string name="fragment_4_text_description_2">Fragment 4 Text 2</string>
    <string name="fragment_5_text_description_1">Fragment 5 Text 1</string>
    <string name="fragment_5_text_description_2">Fragment 5 Text 2</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="check">check</string>
    <string name="cross">cross</string>
    <string name="groupCheckCross">groupCheckCross</string>
    <string name="groupPlusCross">groupPlusCross</string>

    <!-- geometry -->
    <integer name="viewport_center_x">12</integer>
    <integer name="viewport_center_y">12</integer>
    <integer name="stroke_width">2</integer>

    <string name="path_check">M4.8,13.4 L9,17.6 M10.4,16.2 L19.6,7</string>
    <string name="path_cross">M6.4,6.4 L17.6,17.6 M6.4,17.6 L17.6,6.4</string>

    <string name="fragment_0_copy">We all spend more time on our phones, tablets and consoles than we perhaps should. At times, this can make us feel a bit down. So [APP NAME] is here to help you get back control of your device usage. We want you to feel good, and have the tools to maintain a healthy relationship with your devices.</string>
    <string name="fragment_1_title">Take Control</string>
    <string name="fragment_1_subcopy">Our questionnaire will help you identify any areas that may need extra focus. It’s quick, simple and fun to use</string>
    <string name="fragment_2_title">Set goals</string>
    <string name="fragment_2_subcopy">Take control and set relevant goals to help maintain a healthy relationship with your devices</string>
    <string name="fragment_3_title">Earn achievements</string>
    <string name="fragment_3_subcopy">Get rewarded for your continued dedication to achieve device nirvana</string>
    <string name="fragment_4_title">Stay updated</string>
    <string name="fragment_4_subcopy">Sit back, relax and focus on your goals. We’ll update you when it’s time to track your progress</string>

    <!-- timing -->
    <integer name="duration">450</integer>
    <integer name="rotationDeg225">225</integer>
    <integer name="rotationDeg90">90</integer>
    <string name="username">Username</string>

    <string name="tab_1_label">Tasks</string>
    <string name="tab_2_label">Tracker</string>
    <string name="tab_3_label">Achievements</string>
    <string name="title_activity_dialog">DialogActivity</string>

    <string name="transition_dialog">transition_dialog</string>
    <string name="task_input_hint">Username</string>
    <string name="select_date_label">Select a date</string>
    <string name="dialog_button_label">Close</string>
    <string name="dialog_label">Create a new task</string>
    <string name="user_name_label">Your Name Here</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="title_activity_questions">QuestionsActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_me_notifications_label">Send me reminder notifications</string>

    <string name="question0">Did you use any of these devices yesterday?</string>
    <string name="question0_choice">Continue</string>
    <string name="question1">What did you use your devices for?</string>
    <string name="question1_choice">Continue</string>
    <string name="question2">What was your motivation?</string>
    <string name="question2_choice">Continue</string>
    <string name="question3">How long in total did you spend on your device?</string>
    <string name="question3_choice">Continue</string>
    <string name="question4">And Where did you spend the majority of your time?</string>
    <string name="question4_choice">Continue</string>
    <string name="question5">Did you spend any money?</string>
    <string name="question5_choice">Continue</string>
    <string name="question6">What was the impact?</string>
    <string name="question6_choice">Continue</string>
    <string name="question7">How in control do you feel in terms of both time and money?</string>
    <string name="question7_choice">Continue</string>
    <string name="question8">Looking back at your activity, what has been the impact?</string>
    <string name="question8_choice">Continue</string>
    <string name="question9">What do you want to do next?</string>
    <string name="question9_choice">Finish</string>

    <string name="continue_button_label">Continue</string>

</resources>
